# rategain_rag

./: .gitignore  embedding_progress.json  enhanced_temporal_chunks.json  light_rag.py  main.py  main_1.py  pyproject.toml  rag.py  requirements.txt  test.py
chickens/: graph_chunk_entity_relation.graphml  kv_store_full_docs.json  kv_store_llm_response_cache.json  kv_store_text_chunks.json  vdb_chunks.json  vdb_entities.json  vdb_relationships.json
dickens/: kv_store_doc_status.json
document_chunks/: december_chunks.json  september_1_chunks.json  september_2_chunks.json
enhanced_faiss_index/: index.faiss  index.pkl
faiss_index/: index.faiss  index.pkl
rategain_rag_data/: kv_store_doc_status.json  kv_store_llm_response_cache.json  processed_documents.json
