[project]
name = "rategain-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.11.0",
    "google-cloud-aiplatform>=1.101.0",
    "google-generativeai>=0.8.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.0.10",
    "langchain-google-vertexai>=2.0.27",
    "langchain-text-splitters>=0.3.8",
    "lxml>=6.0.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pypdf>=5.7.0",
    "pypdf2>=3.0.1",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
    "unstructured[all-docs]>=0.18.2",
]
